fixed alignment of the external temp to not use absolute position anymore

--- a/src/pages/Home/panels/TemperaturePanel.css
+++ b/src/pages/Home/panels/TemperaturePanel.css
@@ -2,22 +2,6 @@
     box-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2), 0px 1px 1px 0px rgba(0,0,0,0.14), 0px 1px 3px 2px rgba(0,0,0,0.12) !important;
 }
 
-.internal-temp {
-    position: absolute;
-    top: 63%;
-    left: 42%;
-    font-size: 40px;
-    font-weight: bolder;
-}
-
-.external-temp {
-    position: absolute;
-    top: 42%;
-    left: 27%;
-    font-size: 30px;
-    font-weight: bolder;
-}
-
 .form-container {
     margin: 1rem;
     display: flex;
@@ -26,18 +10,6 @@
 @media (max-width: 479px) {
     .form-container {
         flex-direction: column;
-    }
-
-    .external-temp {
-        top: 28%;
-        left: 34%;
-        font-size: 25px;
-    }
-
-    .internal-temp {
-        font-size: 35px;
-        top: 36%;
-        left: 60%;
     }
  }
 
